--- a/my.cnf
+++ b/my.cnf
@@ -2,7 +2,7 @@
 [client]
 Host = localhost
 port = 3306
-database = tp1django
+database = tp1-deploiement
 user = root
 password = root
 default-character-set = utf8
